--- a/index.html
+++ b/index.html
@@ -37,39 +37,37 @@
 
       <div class="row">
         <div class="label">ROLL NO:-</div>
-        <div class="value" id="roll">148249</div>
+        <div class="value" id="roll">220287</div>
       </div>
 
       <div class="row">
         <div class="label">CANDIDATE'S NAME:</div>
-        <div class="value" id="name">MUHAMMAD ILYAS</div>
+        <div class="value" id="name">SHAHID</div>
       </div>
 
       <div class="row">
         <div class="label">FATHER'S NAME:</div>
-        <div class="value" id="father">MUHAMMAD IJAZ</div>
+        <div class="value" id="father">ABDUL MALIK</div>
       </div>
 
       <div class="row">
         <div class="label">NAME OF INSTITUTE:</div>
-        <div class="value institute" id="institute">IDEAL ENGLISH
-GRAMMAR HIGHER
-SEC SCHOOL</div>
+        <div class="value institute" id="institute">LITTLE HEAVEN HIGHER SECONDARY SCHOOL</div>
       </div>
 
       <div class="row">
         <div class="label">ENROLLMENT NO:</div>
-        <div class="value" id="enroll">ZUEB/S.S.C/2024/136529</div>
+        <div class="value" id="enroll">ZUEB/H.S.C/2023/96192</div>
       </div>
 
       <div class="row">
         <div class="label">GROUP:</div>
-        <div class="value" id="group">PRIVATE SCIENCE</div>
+        <div class="value" id="group">PRIVATE COMMERCE</div>
       </div>
 
       <div class="row">
         <div class="label">Date Of Birth:</div>
-        <div class="value" id="group">01-Oct-1999</div>
+        <div class="value" id="group">10-Apr-1999</div>
       </div>
 
       <div class="row">
