--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div class="photo-area">
       <!-- Aapka Base64 Image Added Here -->
-      <img src"https://www.facebook.com/share/1C2p4595ty/"> <alt="image here">
+      <img src"IMG-20241230-WA0009.jpg"> <alt="Candidate Image">
     </div>
 
     <div class="info">
