--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div class="photo-area">
       <!-- Aapka Base64 Image Added Here -->
-      <img src"IMG-20241230-WA0009.jpg"> <alt="Candidate Image">
+      <img src="IMG-20241230-WA0009.jpg"> <alt="Candidate Image">
     </div>
 
     <div class="info">
